# rslox

./: Cargo.toml  README.md  grammar.bnf  justfile  rustfmt.toml  test.lox
.zed/: debug.json
src/: cli.rs  error.rs  lib.rs  main.rs
src/interpreter/: environment.rs  error.rs  mod.rs
src/parser/: expr.rs  mod.rs  printer.rs  stmt.rs
src/scanner/: mod.rs  token.rs
tests/: run_cli.rs
