[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.58", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "1.0.38"                             # error handling

[dev-dependencies]
rstest = "0.26.1"

[lints.rust]
unsafe_code = { priority = 5, level = "forbid" }
# unused = { priority = -1, level = "allow" }
