[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.5.58", features = ["derive"] }
color-eyre = "0.6.5"
thiserror = "1.0.38"

[dev-dependencies]
rstest = "0.26.1"
tempdir = "0.3.7"

[lints.rust]
unsafe_code = { priority = 5, level = "forbid" }
# unused = { priority = -1, level = "allow" }

[profile.dev.package.backtrace]
opt-level = 3
